# stm32-dsp-template

./: .clang-format  .gitignore  CMakeLists.txt  flash.sh  makefile
lib/: CMakeLists.txt
lib/CMSIS/: CMakeLists.txt
lib/HAL/: CMakeLists.txt  stm32f4xx_hal_def.h
lib/libgrm/: CMakeLists.txt  agitation_oscillator.h  array.h  array_tests.cpp  buffer.h  buffer_tests.cpp  container.h  container_tests.cpp  data_compiler.py  dsp.h  dsp_util.h  dynarray.h  dynarray_tests.cpp  filter.h  grm.h  iter.h  iter_tests.cpp  maths.cpp  maths.h  numtypes.h  numtypes_tests.cpp  ppm_files.h  ring.h  ring_tests.cpp  units.h  units_tests.cpp  util.h  wav_files.h  window.h
src/: CMakeLists.txt  accelerometer.hh  button.hh  dac.hh  dac_and_mic.hh  debug_pins.hh  dsp.hh  internal_dac.hh  leds.hh  main.cc  microphone.hh  parameters.h  parameters.hh  processor.h  processor.hh  system.hh
src/drivers/: accelerometer.h  button.h  dac.h  dac_and_mic.h  debug_pins.h  internal_dac.h  leds.h  microphone.h  system.h
